[package]
name = "international_standard_atmosphere"
version = "0.2.1"
authors = ["Atmo"]
edition = "2021"
license = "Unlicense"
description = "This model was implemented using the Manual of the ICAO Standard Atmosphere - extended to 80 kilometres / 262,500 feet (Doc 7488)."
repository = "https://github.com/MeechaelA/InternationalStandardAtmosphere"
keywords = ["atmosphere", "aerospace", "meteorology"]
exclude = [".*", "/docs", "README.md"]
include = ["license.txt","/src", "/examples", "/tests"]

[dependencies]